<resources>
    <string name="app_name">Andrew Shkrob</string>
    <string name="developer_name">Andrew Shkrob</string>
    <string name="welcome_words">Greeting</string>
    <string name="app_description">Description of the application</string>
    <string name="radio_button_theme_light">Light theme</string>
    <string name="radio_button_theme_dark">Dark theme</string>
    <string name="context_menu_app_delete">Delete</string>
    <string name="context_menu_app_frequency">Frequency</string>
    <string name="context_menu_app_launch_amount">Launch amount</string>
    <string name="context_menu_app_info">Information</string>
    <string name="context_menu_app_add_to_desktop">Add to desktop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_launcher_desktop">Desktop</string>
    <string name="nav_drawer_launcher_grid">Grid</string>
    <string name="nav_drawer_launcher_list">List</string>
    <string name="nav_drawer_title_options">Options</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_theme_dark">Dark theme</string>
    <string name="pref_title_model">Model</string>
    <string name="pref_model_solid">Solid model</string>
    <string name="pref_title_sort">Sort</string>
    <string name="pref_sort_type">Sort type</string>
	<string-array name="pref_sort_entries">
        <item>Absent</item>
        <item>By installation date +</item>
        <item>By installation date -</item>
        <item>In alphabet order A-Z</item>
        <item>In alphabet order Z-A</item>
        <item>By launch amount +</item>
        <item>By launch amount -</item>
    </string-array>
    <string-array name="pref_sort_entry_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="pref_background">Wallpapers</string>
    <string name="pref_background_unique_for_every_fragment">Unique wallpapers for every screen</string>
    <string name="pref_background_change_frequency">Background change frequency</string>
    <string-array name="pref_background_change_frequency_entries">
        <item>15 minutes</item>
        <item>1 hour</item>
        <item>8 hours</item>
        <item>24 hours</item>
    </string-array>
    <string-array name="pref_background_change_frequency_entry_values">
        <item>15</item>
        <item>60</item>
        <item>480</item>
        <item>1440</item>
    </string-array>
    <string name="pref_show_welcome_page_on_next_load">Show welcome page</string>
    <string name="pref_show_welcome_page_on_next_load_summary">Next boot</string>
    <string name="pref_key_theme_dark">pref_theme_dark</string>
    <string name="pref_key_model_solid">pref_model_solid</string>
    <string name="pref_key_sort_type">pref_sort_type</string>
    <string name="pref_key_show_welcome_page_on_next_load">pref_show_welcome_page_on_next_load</string>
    <string name="pref_key_background_change_frequency">pref_background_change_frequency</string>
    <string name="pref_key_first_application_launch">pref_first_application_launch</string>
    <string name="pref_key_unique_background_photos">pref_unique_background_photos</string>
    <string name="model_type_default">Default model</string>
    <string name="model_type_solid">Solid model</string>
    <string name="model_type_solid_description">In portrait mode: 5 icons in a row\nIn landscape mode: 7 icons in a row</string>
    <string name="model_type_default_description">In portrait mode: 4 icons in a row\nIn landscape mode: 6 icons in a row</string>
    <string name="log_tag_preferences">PREFERENCES</string>
    <string name="log_tag_button_click">BUTTON_CLICK</string>
    <string name="log_tag_error">ERROR</string>
    <string name="log_tag_launcher">LAUNCHER</string>
    <string name="log_tag_broadcast">BROADCAST</string>
    <string-array name="fragment_list_random_text">
        <item>"A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"</item>
        <item>"The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"</item>
        <item>"Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"</item>
        <item>"The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"</item>
        <item>"Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"</item>
        <item>"All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"</item>
        <item>"The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"</item>
        <item>"Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"</item>
        <item>"Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"</item>
    </string-array>
    <string name="title_activity_profile">Profile</string>
</resources>