<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_title_theme">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_theme_dark"
            android:title="@string/pref_theme_dark" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_model">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_model_solid"
            android:summary="@string/model_type_solid_description"
            android:title="@string/pref_model_solid" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_sort">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_sort_entries"
            android:entryValues="@array/pref_sort_entry_values"
            android:key="@string/pref_key_sort_type"
            android:title="@string/pref_sort_type" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_background">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_unique_background_photos"
            android:title="@string/pref_background_unique_for_every_fragment" />


        <ListPreference
            android:defaultValue="15"
            android:entries="@array/pref_background_change_frequency_entries"
            android:entryValues="@array/pref_background_change_frequency_entry_values"
            android:key="@string/pref_key_background_change_frequency"
            android:title="@string/pref_background_change_frequency" />
    </PreferenceCategory>

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_show_welcome_page_on_next_load"
        android:summary="@string/pref_show_welcome_page_on_next_load_summary"
        android:title="@string/pref_show_welcome_page_on_next_load" />

</PreferenceScreen>